--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
 
     <link
-      href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&family=Raleway:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lato&family=Oswald:wght@600&family=Raleway:wght@400;700&display=swap"
       rel="stylesheet"
     />
 
