--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
 
     <link
-      href="https://fonts.googleapis.com/css2?family=Lato&family=Oswald:wght@600&family=Raleway:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lato&family=Oswald:wght@600&family=Raleway:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
 
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Sapient Games</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
